# AuRo_Final

./: README.md  ball_detector.launch
catkin_workspace/devel/: .catkin  .rosinstall
catkin_workspace/devel/include/kortex_driver/: Action.h  ActionEvent.h  ActionExecutionState.h  ActionHandle.h  ActionList.h  ActionNotification.h  ActionNotificationList.h  ActionType.h  Action_action_parameters.h  ActivateMapHandle.h  ActivateMapRequest.h  ActivateMapResponse.h  ActuatorCommand.h  ActuatorConfig_ClearFaultsRequest.h  ActuatorConfig_ClearFaultsResponse.h  ActuatorConfig_ControlMode.h  ActuatorConfig_ControlModeInformation.h  ActuatorConfig_GetControlModeRequest.h  ActuatorConfig_GetControlModeResponse.h  ActuatorConfig_SafetyLimitType.h  ActuatorConfig_ServiceVersion.h  ActuatorCustomData.h  ActuatorCyclic_Command.h  ActuatorCyclic_CustomData.h  ActuatorCyclic_Feedback.h  ActuatorCyclic_MessageId.h  ActuatorCyclic_ServiceVersion.h  ActuatorFeedback.h  ActuatorInformation.h  AddSequenceTasksRequest.h  AddSequenceTasksResponse.h  AddWifiConfigurationRequest.h  AddWifiConfigurationResponse.h  Admittance.h  ApiOptions.h  (+915 more)
catkin_workspace/scripts/: run_arm_driver.sh  run_debug.sh  run_moveit.sh  run_talker.sh  setup.sh
catkin_workspace/src/ros_kortex/auto_robot/: CMakeLists.txt
catkin_workspace/src/ros_kortex/auto_robot/launch/: moveit_example.launch
catkin_workspace/src/ros_kortex/auto_robot/src/move_it/: ball_center.py  example_move_it_trajectories.py  interface.py  new_T.py  talker.py  transformer.py
catkin_workspace/src/ros_kortex/auto_robot/srv/: AutoService.srv
(+39 files in other folders)
